# python-server

./: Dockerfile  README.md  deploy.sh  docker-compose.yml
python-api/: app.py  pyproject.toml  requirement.txt  temp.py
python-api/conf/: __init__.py
python-api/controller/: bookmark.py
python-api/controllers/: bookmark.py
python-api/database/: __init__.py  collection.py  mongo.py
python-api/databases/: __init__.py  collection.py
python-api/mytools/: __init__.py  clean_object.py  response.py
python-api/templates/: index.html
